# ProjectA

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
Editor/: .gitignore  CMakeLists.txt
Editor/src/: Editor.cpp  Editor.h  Editor.hpp  EditorCamera.cpp  EditorCamera.h  EditorCamera.hpp
Editor/src/System/: CameraSystem.cpp  CameraSystem.hpp
Editor/src/Util/: FileWatcher.cpp  FileWatcher.h  ResourceTree.cpp  ResourceTree.h  ResourceTree.hpp
Editor/src/Widget/: ContentBrowser.cpp  ContentBrowser.h  ContentBrowser.hpp  Controls.cpp  Controls.hpp  EntityGizmo.cpp  EntityGizmo.h  EntityGizmo.hpp  EntityInspector.cpp  EntityInspector.h  EntityInspector.hpp  MainMenuBar.cpp  MainMenuBar.h  MainMenuBar.hpp  NodeInspector.cpp  NodeInspector.hpp  SceneHierarchy.cpp  SceneHierarchy.h  SceneHierarchy.hpp  Toolbar.cpp  Toolbar.h  Toolbar.hpp  TransformNodeGizmo.cpp  TransformNodeGizmo.hpp  ViewportDragDrop.cpp  ViewportDragDrop.h  ViewportDragDrop.hpp  Widget.h  Widget.hpp
Engine/: CMakeLists.txt
Engine/src/: Precompiled.h  Precompiled.hpp
Engine/src/Common/: Cache.h  Cache.hpp  FileSystem.cpp  FileSystem.h  FileSystem.hpp  Hash.hpp  Object.hpp  ScopedEnum.h  Singleton.hpp  Uuid.cpp  Uuid.h  Uuid.hpp
Engine/src/Core/: Application.cpp  Application.h  Application.hpp  Gui.cpp  Gui.h  Gui.hpp  Input.cpp  Input.h  Input.hpp  InputEvent.cpp  InputEvent.hpp  KeyCode.hpp  Main.h  Main.hpp  MouseCode.hpp  RenderSystem.cpp  RenderSystem.hpp  System.hpp  Window.cpp  Window.h  Window.hpp  WindowInput.cpp  WindowInput.h  WindowInput.hpp  WindowSurface.cpp  WindowSurface.h  WindowSurface.hpp
Engine/src/Math/: Basis.cpp  Basis.hpp  Transform.cpp  Transform.hpp
Engine/src/Physics/: JoltBroadPhaseLayer.h  JoltContactListener.cpp  JoltContactListener.h  JoltContactListener.hpp  JoltLayerMapper.cpp  JoltLayerMapper.hpp  PhysicsRunner.cpp  PhysicsRunner.h  PhysicsRunner.hpp
Engine/src/Platform/: FileDialog.h  FileDialog.hpp
Engine/src/Platform/Linux/: FileDialog.cpp
Engine/src/Platform/Windows/: FileDialog.cpp
Engine/src/Project/: Project.cpp  Project.h  Project.hpp
Engine/src/Rendering/: BufferPool.cpp  Camera.cpp  Camera.h  Camera.hpp  Cubemap.cpp  Cubemap.h  Cubemap.hpp  DescriptorPool.cpp  DescriptorPool.hpp  Frame.cpp  Frame.hpp  GlslCompiler.cpp  GlslCompiler.h  GlslCompiler.hpp  Gui.cpp  Gui.hpp  Material.cpp  Material.h  Material.hpp  Mesh.cpp  Mesh.h  Mesh.hpp  Model.cpp  Pass.cpp  Pass.hpp  RenderAttachment.cpp  RenderAttachment.h  RenderAttachment.hpp  RenderBatcher.cpp  RenderBatcher.h  RenderBatcher.hpp  RenderBuffer.h  RenderBuffer.hpp  RenderCamera.h  RenderCamera.hpp  RenderContext.cpp  RenderContext.h  RenderContext.hpp  RenderFrame.cpp  RenderFrame.h  (+38 more)
Engine/src/Rendering/Caching/: FramebufferCache.cpp  FramebufferCache.hpp
Engine/src/Rendering/Pass/: CompositionPass.cpp  CompositionPass.h  CompositionPass.hpp  ForwardPass.cpp  ForwardPass.h  ForwardPass.hpp  GeometryPass.cpp  GeometryPass.hpp  Pass.cpp  Pass.hpp  ShadowPass.cpp  ShadowPass.h  ShadowPass.hpp  SkyboxPass.cpp  SkyboxPass.h  SkyboxPass.hpp
Engine/src/Rendering/Pool/: BufferPool.cpp  BufferPool.h  BufferPool.hpp  DescriptorPool.cpp  DescriptorPool.h  DescriptorPool.hpp  SemaphorePool.cpp  SemaphorePool.h  SemaphorePool.hpp
Engine/src/Rendering/RenderGraph/: RenderGraph.cpp  RenderGraph.h  RenderGraph.hpp  RenderGraphAllocator.hpp  RenderGraphBuilder.cpp  RenderGraphBuilder.h  RenderGraphBuilder.hpp  RenderGraphCommand.hpp  RenderGraphContext.hpp  RenderGraphPass.h  RenderGraphPass.hpp  RenderGraphResource.hpp  VulkanRenderGraphAllocator.cpp  VulkanRenderGraphAllocator.hpp  VulkanRenderGraphCommand.cpp  VulkanRenderGraphCommand.hpp
Engine/src/Rendering/Subpass/: CompositionSubpass.cpp  CompositionSubpass.hpp  ForwardSubpass.cpp  ForwardSubpass.hpp  GeometrySubpass.cpp  GeometrySubpass.hpp  Subpass.cpp  (+5 more)
Engine/src/Resource/: Model.cpp  Model.hpp  Prefab.cpp  Prefab.hpp  Resource.cpp  Resource.h  Resource.hpp  ResourceImporter.h  ResourceImporter.hpp  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h  ResourceManager.hpp  ResourceMetadata.cpp  ResourceMetadata.h  ResourceRegistry.cpp  ResourceRegistry.h  ResourceRegistry.hpp  ResourceSaver.h  ResourceTools.hpp
Engine/src/Scene/: Components.h  Components.hpp  Entity.cpp  Entity.h  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Loader.cpp  Loader.hpp  Scene.cpp  Scene.h  Scene.hpp  SceneGraph.cpp  SceneGraph.h  SceneLoader.cpp  SceneLoader.hpp  SceneMixin.h  SceneMixin.hpp  SceneResource.cpp  SceneResource.h  SceneSerializer.cpp  SceneSerializer.hpp  TransformHelper.cpp  TransformHelper.h  TransformHelper.hpp
Engine/src/Scripting/: Script.cpp  Script.h  Script.hpp  ScriptBridge.cpp  ScriptBridge.h  ScriptBridge.hpp  ScriptEntity.cpp  ScriptEntity.h  ScriptEntity.hpp  ScriptInstance.cpp  ScriptInstance.h  ScriptInstance.hpp  ScriptRunner.cpp  ScriptRunner.h  ScriptRunner.hpp
Engine/src/Utils/: FileSystem.hpp  Hash.hpp  Singleton.hpp
Engine/src/Vulkan/: Buffer.cpp  Buffer.h  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.h  CommandBuffer.hpp  CommandPool.cpp  CommandPool.h  CommandPool.hpp  DebugMessenger.cpp  DebugMessenger.h  DebugMessenger.hpp  DescriptorPool.cpp  DescriptorPool.h  DescriptorPool.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.h  DescriptorSetLayout.hpp  Details.cpp  Details.hpp  Device.cpp  Device.h  Device.hpp  Fence.cpp  Fence.h  Fence.hpp  Framebuffer.cpp  Framebuffer.hpp  GlslCompiler.cpp  GlslCompiler.hpp  Image.cpp  Image.h  Image.hpp  ImageView.cpp  ImageView.h  ImageView.hpp  Instance.cpp  Instance.h  Instance.hpp  PhysicalDevice.cpp  (+37 more)
Engine/static/shaders/: composition.frag.glsl  forward.frag.glsl  forward.vert.glsl  imgui.frag.glsl  imgui.vert.glsl  shadowmap.vert.glsl
Engine/test/Fixture/: Components.h  Components.hpp
Engine/test/Resource/: ResourceManagerTest.cpp  ResourceTest.cpp
Engine/test/Scene/: EntityTest.cpp  ManagerTest.cpp  MixinTest.cpp  SceneTest.cpp
Game/: CMakeLists.txt
Game/src/: ProjectA.cpp  main.cpp
Game/src/System/: InputSystem.cpp  InputSystem.hpp
(+175 files in other folders)
